# NextMusicReview

./: .eslintignore  .eslintrc.json  .gitignore  README.md  codegen.yml  jest.setup.ts  next.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
__tests__/: utils.ts  utils.tsx
__tests__/album/: albumActionsBar.spec.tsx  albumDeleteButton.spec.tsx
scripts/: fetch_data.py  fetch_db.py  fetch_last_fm.py  save_to_algolia.py  save_to_db.py
src/album/: types.ts
src/album/components/: albumActionsBar.test.tsx  albumActionsBar.tsx  albumDeleteButton.test.tsx  albumDeleteButton.tsx  albumDetails.test.tsx  albumDetails.tsx  albumDetailsPage.test.tsx  albumDrawer.tsx  albumDrawerContent.test.tsx  albumDrawerContent.tsx  albumEditAccordion.test.tsx  albumEditAccordion.tsx  albumForm.test.tsx  albumForm.tsx  albumGrid.test.tsx  albumGrid.tsx  albumGridItem.test.tsx  albumGridItem.tsx  albumPopover.tsx
src/album/graphql/: AlbumDetails.graphql  AlbumFragments.graphql  AlbumListItem.graphql  AlbumReviews.graphql  DeleteAlbum.graphql  (+1 more)
src/common/: functions.ts
src/graphql/: constants.ts  fetcher.ts  types.ts
src/mocks/: defaults.ts
src/pages/: _app.tsx  _document.tsx  index.tsx  loginCallback.tsx  reviews.tsx  search.tsx  search2.tsx
src/review/: defaults.ts  types.ts
src/search/: searchClient.ts  types.ts
src/stories/: Button.stories.tsx  Button.tsx  Header.stories.tsx  Header.tsx  Page.stories.tsx  Page.tsx
src/tests/: defaults.ts  mockServer.ts  setupTests.ts
src/users/: auth0.ts  getAccessToken.ts  getApiToken.ts  types.ts
(+147 files in other folders)
